@@ -1,3 +1,12 @@
+2008-11-27  Emilio Meschi  <emilio.meschi@cern.ch>
+	* tag V01-06-12-03
+	* branch tag for 2XX series for online use. Fix problem with fake 
+	events and access to gt data
+
+2008-11-04  Emilio Meschi  <emilio.meschi@cern.ch>
+	* tag V01-06-12-02
+	* branch tag for 2XX series to allow release of DaqSource for online use
+
 2008-10-17  Emilio Meschi  <emilio.meschi@cern.ch>
 	* tag V01-06-13
 	* use timeout for LS in scalers access (cond_timedwait)
